--- a/src/PipelineFramework.Autofac/PipelineFramework.Autofac.csproj
+++ b/src/PipelineFramework.Autofac/PipelineFramework.Autofac.csproj
@@ -13,6 +13,7 @@
     <Version>4.0.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Description>Extends PipelineFramework to enable Autofac DI container for pipeline construction and execution</Description>
+    <DocumentationFile Condition="'$(Configuration)'=='Release'">bin\Release\netstandard2.0\PipelineFramework.LightInject.xml</DocumentationFile>
     <NeutralLanguage>en</NeutralLanguage>
     <PackageId>PipelineFramework.Autofac</PackageId>
     <Product>PipelineFramework.Autofac</Product>
