--- a/src/PipelineFramework.LightInject/PipelineFramework.LightInject.csproj
+++ b/src/PipelineFramework.LightInject/PipelineFramework.LightInject.csproj
@@ -11,6 +11,7 @@
     <Version>4.0.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Description>Extends PipelineFramework to enable LightInject DI container for pipeline construction and execution</Description>
+    <DocumentationFile Condition="'$(Configuration)'=='Release'">bin\Release\netstandard2.0\PipelineFramework.LightInject.xml</DocumentationFile>
     <NeutralLanguage>en</NeutralLanguage>
     <PackageId>PipelineFramework.LightInject</PackageId>
     <Product>PipelineFramework.LightInject</Product>
